# soci-sample

./: .gitmodules  CMakeLists.txt  Makefile  README.rst
src/: main.cpp
